[package]
name = "hada-geek-news"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"